<resources>
    <string name="app_name">Application</string>
    <string name="user_name">Name</string>
    <string name="user_password">Password</string>
    <string name="filter">Filter</string>
    <string name="birth_date">Birth Date</string>
    <string name="refresh">Refresh</string>
    <string name="login">Login</string>
    <string name="sig_in">Sign_in</string>
    <string name="register">Register</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="repeatepassword">Repeate Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="facebook_app_id">506031173688299</string>
    <string name="fb_login_protocol_scheme">fb506031173688299</string>

</resources>
